--- a/SystemDoc.html
+++ b/SystemDoc.html
@@ -34,7 +34,7 @@
 </ul>
 <p>Build instructions:</p>
 <ul>
-<li><a href="/wiki/wiki/QubesBuilder">Building all Qubes packages</a></li>
+<li><a href="/wiki/wiki/QubesBuilder">Building Qubes</a></li>
 </ul>
 <ul>
 <li><a href="/wiki/wiki/KdeDom0">KDE Dom0 packages for Qubes</a></li>
