--- a/QubesBuilder.html
+++ b/QubesBuilder.html
@@ -1,5 +1,4 @@
 <h1 id="BuildingQubesfromscratch">Building Qubes from scratch</h1>
-<p>(based on <a href="https://groups.google.com/group/qubes-devel/browse_thread/thread/588399cdd43da28c/496e9eb9ccf31abb">​this post</a>)</p>
 <p>We have recently created a fully automated build system for Qubes, that downloads, builds and packages all the Qubes components, and finally should spit out a ready-to-use installation ISO.</p>
 <p>In order to use it one should use an rpm-based distro, like Fedora :) and should ensure the following packages are installed:</p>
 <ul>
@@ -11,7 +10,17 @@
 <p>Unusually one can install those packages by just issuing:</p>
 <pre class="wiki"><code>sudo yum install git createrepo rpm-build make </code></pre>
 <p>The build system creates build environments in chroots and so no other packages are needed on the host. All files created by the build system are contained within the qubes-builder directory. The full build requires some 25GB of free space, so keep that in mind when deciding where to place this directory.</p>
+<p>The build system is configured via builder.conf file -- one should copy the attached builder.conf.template, and modify it as needed, e.g.:</p>
+<pre class="wiki"><code>cp builder.conf.default builder.conf 
+# edit the builder.conf file and set the following variables: 
+# (make sure to leave no spaces around &#39;=&#39; sign!) 
+# NO_SIGN=&quot;1&quot;</code></pre>
 <p>One additional useful requirement is that 'sudo root' work without any prompt, which is default on most distros (e.g. 'sudo bash' brings you the root shell without asking for any password). This is important as the builder needs to switch to root and then back to user several times during the build process.</p>
+<p>Additionally, if building with signing enabled (so NO_SIGN is not set), one must adjust ~/.rpmmacro file so that it point to the GPG key used for package signing, e.g.:</p>
+<pre class="wiki"><code>%_signature gpg
+%_gpg_path /home/user/.gnupg
+%_gpg_name AC1BF9B3  # &lt;-- Key ID used for signing</code></pre>
+<p>It is also recommended to use an empty passphrase for the private key used for signing. Contrary to a popular belief, this doesn't affect your key or sources security -- if somebody compromised your system, then the game is over, whether you use additional passphrase for the key or not.</p>
 <p>So, to build Qubes one would do:</p>
 <pre class="wiki"><code># Import the Qubes master key 
 gpg --recv-keys 0x36879494 
@@ -29,7 +38,6 @@ cd qubes-builder
 cp builder.conf.default builder.conf 
 # edit the builder.conf file and set the following variables: 
 # (make sure to leave no spaces around &#39;=&#39; sign!) 
-# GIT_SUBDIR=&quot;joanna&quot; 
 # NO_SIGN=&quot;1&quot;
 
 # And now to build all Qubes rpms (this will take a few hours): 
