--- a/InstallationGuide.html
+++ b/InstallationGuide.html
@@ -1,12 +1,12 @@
-<h1 id="InstallationGuideforQubesBeta2">Installation Guide (for Qubes Beta 2)</h1>
+<h1 id="InstallationGuideforQubesBeta3">Installation Guide (for Qubes Beta 3)</h1>
 <h2 id="HardwareRequirements">Hardware Requirements</h2>
 <p>Minimum:</p>
 <ul>
 <li>4GB of RAM</li>
 <li>64-bit Intel or AMD processor (x86_64 aka x64 aka AMD64)</li>
 <li>Intel GPU strongly preferred (if you have Nvidia GPU, prepare for some <a href="/wiki/wiki/InstallNvidiaDriver">troubleshooting</a>; we haven't tested ATI hardware)</li>
-<li>10GB of disk (Note that <strong>it is possible to install Qubes on an external USB disk</strong>, so that you can try it without sacrificing your current system. Mind, however, that USB disks are usually SLOW!)</li>
-<li>Fat SSD disk strongly recommended</li>
+<li>20GB of disk (Note that <strong>it is possible to install Qubes on an external USB disk</strong>, so that you can try it without sacrificing your current system. Mind, however, that USB disks are usually SLOW!)</li>
+<li>Fast SSD disk strongly recommended</li>
 </ul>
 <p>Additional requirements:</p>
 <ul>
@@ -17,8 +17,8 @@
 <h2 id="DownloadinstallerISO">Download installer ISO</h2>
 <p>You can download the ISO and the digital signature for the ISO from here:</p>
 <ul>
-<li><a href="http://s3-eu-west-1.amazonaws.com/qubes-os/iso/Qubes-R1-Beta2-x86_64-DVD.iso">​http://s3-eu-west-1.amazonaws.com/qubes-os/iso/Qubes-R1-Beta2-x86_64-DVD.iso</a></li>
-<li><a href="http://s3-eu-west-1.amazonaws.com/qubes-os/iso/Qubes-R1-Beta2-x86_64-DVD.iso.asc">​http://s3-eu-west-1.amazonaws.com/qubes-os/iso/Qubes-R1-Beta2-x86_64-DVD.iso.asc</a></li>
+<li><a href="http://s3-eu-west-1.amazonaws.com/qubes-os/iso/Qubes-R1-Beta3-x86_64-DVD.iso">​http://s3-eu-west-1.amazonaws.com/qubes-os/iso/Qubes-R1-Beta3-x86_64-DVD.iso</a></li>
+<li><a href="http://s3-eu-west-1.amazonaws.com/qubes-os/iso/Qubes-R1-Beta3-x86_64-DVD.iso.asc">​http://s3-eu-west-1.amazonaws.com/qubes-os/iso/Qubes-R1-Beta3-x86_64-DVD.iso.asc</a></li>
 </ul>
 <p>See this <a href="/wiki/wiki/VerifyingSignatures">page</a> for more info about how to download and verify our GPG keys. Then, verify the downloaded ISO:</p>
 <pre class="wiki"><code>gpg -v &lt;iso&gt;.asc</code></pre>
@@ -26,8 +26,9 @@
 <p>Once you verify this is an authentic ISO, you should burn it on a DVD. For instructions on how to &quot;burn&quot; it on a USB stick, see <a href="/wiki/wiki/UsbInstallation">this page</a>. Before proceeding with the installation, you are encouraged to first read all the information on this page, especially the <em>Known Issues</em> paragraph.</p>
 <p>Then, when finally ready, boot your system from the installer DVD and follow the instructions on screen. The installer is very simple and asks very few questions -- it's actually easier to install Qubes right now than most other Linux distributions!</p>
 <p>The installer loads Xen right at the beginning, so chances are high that if you can see the installer's graphical screen, Qubes will work on your system :)</p>
-<h2 id="MigratingfromQubesBeta1">Migrating from Qubes Beta 1</h2>
-<p>If you have Qubes Beta 1 currently installed on your system, you must reinstall from scratch, as we offer no direct upgrade option in the installer (sorry). However, we do offer tools for smooth migration of your AppVMs. In order to do that, please backup your AppVMs using the <code></code><code>qvm-backup</code><code></code> tool <a href="/wiki/wiki/BackupRestore">as usual</a>. Then, after you install Qubes Beta 2, you can restore them using <code></code><code>qvm-backup-restore</code><code></code> tool that.</p>
+<h2 id="MigratingfromQubesBeta2">Migrating from Qubes Beta 2</h2>
+<p>If you have Qubes Beta 2 currently installed on your system, you must reinstall from scratch, as we offer no direct upgrade option in the installer (sorry). However, we do offer tools for smooth migration of your AppVMs. In order to do that, please backup your AppVMs using the <code></code><code>qvm-backup</code><code></code> tool <a href="/wiki/wiki/BackupRestore">as usual</a>. Then, after you install Qubes Beta 3, you can restore them using <code></code><code>qvm-backup-restore</code><code></code> tool that. Because we have changed the default template in Beta 3, you should tell qvm-back-restore about that by passing <code></code><code>--replace-template</code><code></code> option:</p>
+<pre class="wiki"><code>qvm-backup-restore &lt;backup_dir&gt; --replace-template=fedora-14-x64:fedora-15-x64</code></pre>
 <h2 id="InstallingUpdates">Installing Updates</h2>
 <p>Currently the user must start the update process manually (in future versions we will make this automatic).</p>
 <ul>
@@ -40,9 +41,6 @@
 </ul>
 <ul>
 <li>If you have Sony Vaio Z, you will need some tinkering before you would be able to fully use this machine with Qubes (and generally with non-Windows systems). See this <a href="/wiki/wiki/SonyVaioTinkering">page</a> for instructions.</li>
-</ul>
-<ul>
-<li>KDE taskbar might look ugly. This problem can be easily solved by turning composition on (it's called &quot;Desktop Effects&quot;, and can be found in System Settings/Desktop tab).</li>
 </ul>
 <ul>
 <li>Installer might not support some USB keyboards (#230). This seems to include all the Mac Book keyboards (most PC laptops have PS2 keyboards and are not affected).</li>
