--- a/QubesBuilder.html
+++ b/QubesBuilder.html
@@ -10,7 +10,7 @@
 <p>Unusually one can install those packages by just issuing:</p>
 <pre class="wiki"><code>sudo yum install git createrepo rpm-build make </code></pre>
 <p>The build system creates build environments in chroots and so no other packages are needed on the host. All files created by the build system are contained within the qubes-builder directory. The full build requires some 25GB of free space, so keep that in mind when deciding where to place this directory.</p>
-<p>The build system is configured via builder.conf file -- one should copy the attached builder.conf.template, and modify it as needed, e.g.:</p>
+<p>The build system is configured via builder.conf file -- one should copy the attached builder.conf.default, and modify it as needed, e.g.:</p>
 <pre class="wiki"><code>cp builder.conf.default builder.conf 
 # edit the builder.conf file and set the following variables: 
 # (make sure to leave no spaces around &#39;=&#39; sign!) 
