--- a/InstallationGuide.html
+++ b/InstallationGuide.html
@@ -20,6 +20,10 @@
 <li><a href="http://s3-eu-west-1.amazonaws.com/qubes-os/iso/Qubes-R1-Beta3-x86_64-DVD.iso">​http://s3-eu-west-1.amazonaws.com/qubes-os/iso/Qubes-R1-Beta3-x86_64-DVD.iso</a></li>
 <li><a href="http://s3-eu-west-1.amazonaws.com/qubes-os/iso/Qubes-R1-Beta3-x86_64-DVD.iso.asc">​http://s3-eu-west-1.amazonaws.com/qubes-os/iso/Qubes-R1-Beta3-x86_64-DVD.iso.asc</a></li>
 </ul>
+<p>or you might try to download the ISO via bit torrent:</p>
+<ul>
+<li><a href="http://s3-eu-west-1.amazonaws.com/qubes-os/iso/Qubes-R1-Beta3-x86_64-DVD.iso?torrent">​http://s3-eu-west-1.amazonaws.com/qubes-os/iso/Qubes-R1-Beta3-x86_64-DVD.iso?torrent</a></li>
+</ul>
 <p>See this <a href="/wiki/wiki/VerifyingSignatures">page</a> for more info about how to download and verify our GPG keys. Then, verify the downloaded ISO:</p>
 <pre class="wiki"><code>gpg -v &lt;iso&gt;.asc</code></pre>
 <h2 id="BurningtheISOontoaDVDorUSBstick">Burning the ISO onto a DVD or USB stick</h2>
