--- a/QubesBuilder.html
+++ b/QubesBuilder.html
@@ -8,7 +8,7 @@
 <li>make</li>
 </ul>
 <p>Unusually one can install those packages by just issuing:</p>
-<pre class="wiki"><code>sudo yum install git createrepo rpm-build make </code></pre>
+<pre class="wiki"><code>sudo yum install git createrepo rpm-build make wget</code></pre>
 <p>The build system creates build environments in chroots and so no other packages are needed on the host. All files created by the build system are contained within the qubes-builder directory. The full build requires some 25GB of free space, so keep that in mind when deciding where to place this directory.</p>
 <p>The build system is configured via builder.conf file -- one should copy the attached builder.conf.default, and modify it as needed, e.g.:</p>
 <pre class="wiki"><code>cp builder.conf.default builder.conf 
