--- a/UserDoc.html
+++ b/UserDoc.html
@@ -19,7 +19,7 @@
 </ul>
 <p>Command-line tools reference:</p>
 <ul>
-<li>Dom0 tools</li>
+<li><a href="/wiki/wiki/DomZeroTools">Dom0 tools</a></li>
 <li>VM tools</li>
 </ul>
 <p>Optional topics:</p>
