--- a/WikiStart.html
+++ b/WikiStart.html
@@ -3,6 +3,7 @@
 <ul>
 <li><a href="/wiki/wiki/SecurityGoals">Qubes Security Goals</a></li>
 <li><a href="/wiki/wiki/InstallationGuide">Installation guide</a></li>
+<li><a href="/wiki/wiki/HCL">Hardware Compatibility List</a></li>
 <li><a href="/wiki/wiki/VerifyingSignatures">On digital signatures and how to verify Qubes downloads</a></li>
 <li><a href="/wiki/wiki/UserDoc">User Guide</a></li>
 <li><a href="/wiki/wiki/UserFaq">FAQ</a></li>
