--- a/WikiStart.html
+++ b/WikiStart.html
@@ -41,11 +41,10 @@
 </ul>
 <h3 id="Contributors">Contributors</h3>
 <ul>
-<li>TBD</li>
-</ul>
-<h3 id="Pastdevelopers">Past developers</h3>
-<ul>
 <li>Tomasz Sterna &lt;tomek at xiaoka dot com&gt; - installer &amp; gui</li>
+</ul>
+<ul>
+<li>Agnieszka Kostrzewa &lt;a.kostrzewa at alx dot pl&gt; - qubes-manager, docs</li>
 </ul>
 <h3 id="Presscontact">Press contact</h3>
 <ul>
