--- a/InstallationGuide.html
+++ b/InstallationGuide.html
@@ -1,19 +1,6 @@
 <h1 id="InstallationGuideforQubesBeta3">Installation Guide (for Qubes Beta 3)</h1>
 <h2 id="HardwareRequirements">Hardware Requirements</h2>
-<p>Minimum:</p>
-<ul>
-<li>4GB of RAM</li>
-<li>64-bit Intel or AMD processor (x86_64 aka x64 aka AMD64)</li>
-<li>Intel GPU strongly preferred (if you have Nvidia GPU, prepare for some <a href="/wiki/wiki/InstallNvidiaDriver">troubleshooting</a>; we haven't tested ATI hardware)</li>
-<li>20GB of disk (Note that <strong>it is possible to install Qubes on an external USB disk</strong>, so that you can try it without sacrificing your current system. Mind, however, that USB disks are usually SLOW!)</li>
-<li>Fast SSD disk strongly recommended</li>
-</ul>
-<p>Additional requirements:</p>
-<ul>
-<li>Intel VT-d or AMD IOMMU technology (this is needed for effective isolation of your network VMs)</li>
-</ul>
-<p>If you don't meet the additional criteria, you can still install and use Qubes. It still offers significant security improvement over traditional OSes, because things such as GUI isolation, or kernel protection do not require special hardware.</p>
-<p><strong>Note:</strong> We don't recommend installing Qubes in a virtual machine! <strong>Note:</strong> There is a problem with supporting keyboard and mouse on Mac, and so Mac hardware is currently unsupported (patches welcomed!)</p>
+<p>Please see the <a href="/wiki/wiki/HCL">Hardware Compatibility List</a> page for more information on required and recommended hardware.</p>
 <h2 id="DownloadinstallerISO">Download installer ISO</h2>
 <p>You can download the ISO and the digital signature for the ISO from here:</p>
 <ul>
