--- a/HCL.html
+++ b/HCL.html
@@ -26,7 +26,10 @@
 <li>Samsung X460 - works well on both xenlinux 2.6.38 and pvops 3.2.7 kernel; after resume ethernet driver (sky2) need to be reloaded in netvm to start working again. Even though the chipset suppors VT-d, the BIOS is broken, and so the VT-d is not picked up by Xen, so it effectively doesn't work.</li>
 </ul>
 <ul>
-<li>Sony Vaio Z 12 -- works well, but some <a href="/wiki/wiki/SonyVaioTinkering">tinkering required</a></li>
+<li>Sony Vaio Z 12 (2010 edition) -- works well, but some <a href="/wiki/wiki/SonyVaioTinkering">tinkering required</a></li>
 </ul>
 <h2 id="SpecificsystemstestedbytheQubescommunity">Specific systems tested by the Qubes community</h2>
-<p>TODO</p>
+<ul>
+<li>Fujitsu S751 seems to work well, but no VT-d support! Reported by <a href="https://groups.google.com/forum/#!msg/qubes-devel/xoyNCigBvFE/ER61L6TbVpwJ">​Zrubecz Laszlo</a>.</li>
+<li>Sony Vaio Z2 (2011 edition) works fine but requires some BIOS mod to enable VT-d. Reported by <a href="https://groups.google.com/d/msg/qubes-devel/xoyNCigBvFE/fkC6em-Wqd0J">​Danny Fullerton</a>.</li>
+</ul>
