--- a/HCL.html
+++ b/HCL.html
@@ -30,6 +30,6 @@
 </ul>
 <h2 id="SpecificsystemstestedbytheQubescommunity">Specific systems tested by the Qubes community</h2>
 <ul>
-<li>Fujitsu S751 seems to work well, but no VT-d support! Reported by <a href="https://groups.google.com/forum/#!msg/qubes-devel/xoyNCigBvFE/ER61L6TbVpwJ">​Zrubecz Laszlo</a>.</li>
+<li>Fujitsu S751 seems to work well, but requires BIOS update to get VT-d working. Reported by <a href="https://groups.google.com/forum/#!msg/qubes-devel/xoyNCigBvFE/ER61L6TbVpwJ">​Zrubecz Laszlo</a>.</li>
 <li>Sony Vaio Z2 (2011 edition) works fine but requires some BIOS mod to enable VT-d. Reported by <a href="https://groups.google.com/d/msg/qubes-devel/xoyNCigBvFE/fkC6em-Wqd0J">​Danny Fullerton</a>.</li>
 </ul>
