--- a/UserDoc.html
+++ b/UserDoc.html
@@ -5,6 +5,7 @@
 <li><a href="/wiki/wiki/CopyingFiles">Copying files between domains</a></li>
 <li><a href="/wiki/wiki/SoftwareUpdateVM">Updating and adding new software to domains</a></li>
 <li><a href="/wiki/wiki/SoftwareUpdateDom0">Updating software in Dom0</a></li>
+<li><a href="/wiki/wiki/ManagerUpdates">Dom0 and VM updates via Qubes Manager?</a></li>
 <li><a href="/wiki/wiki/BackupRestore">Backup/Restore/Migration</a></li>
 <li>Using Disposable VMs</li>
 <li><a href="/wiki/wiki/QubesFirewall">Using Qubes firewall</a></li>
