Dom0Tools/QvmLs changed

--- a/Dom0Tools/QvmLs.html
+++ b/Dom0Tools/QvmLs.html
@@ -1,1 +1,1 @@
-<p>TBD</p>
+<p><a href="/wiki/wiki/Dom0Tools/Include(http%3A/git.qubes-os.org?p=mainstream/docs.git;a=blob_plain;f=qvm-tools/qvm-ls.rst;hb=master,%20text/x-rst)">Include(http://git.qubes-os.org/?p=mainstream/docs.git;a=blob_plain;f=qvm-tools/qvm-ls.rst;hb=master, text/x-rst)?</a></p>
