--- a/DomZeroTools.html
+++ b/DomZeroTools.html
@@ -1,4 +1,27 @@
 <p>QVM-tools:</p>
 <ul>
 <li><a href="/wiki/wiki/QvmLs">qvm-ls?</a></li>
+<li>[Dom0Tools/QubesDom0Network-via-netvm qubes-dom0-network-via-netvm]</li>
+<li>[Dom0Tools/QubesDom0Update qubes-dom0-update]</li>
+<li>[Dom0Tools/QubesPrefs qubes-prefs]</li>
+<li>[Dom0Tools/QvmAddAppvm qvm-add-appvm]</li>
+<li>[Dom0Tools/QvmAddTemplate qvm-add-template]</li>
+<li>[Dom0Tools/QvmBackupRestore qvm-backup-restore]</li>
+<li>[Dom0Tools/QvmBackup qvm-backup]</li>
+<li>[Dom0Tools/QvmBlock qvm-block]</li>
+<li>[Dom0Tools/QvmClone qvm-clone]</li>
+<li>[Dom0Tools/QvmCreateDefaultDvm qvm-create-default-dvm]</li>
+<li>[Dom0Tools/QvmCreate qvm-create]</li>
+<li>[Dom0Tools/QvmFirewall qvm-firewall]</li>
+<li>[Dom0Tools/QvmGrowPrivate qvm-grow-private]</li>
+<li>[Dom0Tools/QvmKill qvm-kill]</li>
+<li>[Dom0Tools/QvmPci qvm-pci]</li>
+<li>[Dom0Tools/QvmPrefs qvm-prefs]</li>
+<li>[Dom0Tools/QvmRemove qvm-remove]</li>
+<li>[Dom0Tools/QvmRevertTemplateChanges qvm-revert-template-changes]</li>
+<li>[Dom0Tools/QvmRun qvm-run]</li>
+<li>[Dom0Tools/QvmShutdown qvm-shutdown]</li>
+<li>[Dom0Tools/QvmStart qvm-start]</li>
+<li>[Dom0Tools/QvmSyncAppmenus qvm-sync-appmenus]</li>
+<li>[Dom0Tools/QvmTemplateCommit qvm-template-commit]</li>
 </ul>
