--- a/DomZeroTools.html
+++ b/DomZeroTools.html
@@ -1,27 +1,27 @@
 <p>QVM-tools:</p>
 <ul>
 <li><a href="/wiki/wiki/QvmLs">qvm-ls?</a></li>
-<li>[Dom0Tools/QubesDom0Network-via-netvm qubes-dom0-network-via-netvm]</li>
-<li>[Dom0Tools/QubesDom0Update qubes-dom0-update]</li>
-<li>[Dom0Tools/QubesPrefs qubes-prefs]</li>
-<li>[Dom0Tools/QvmAddAppvm qvm-add-appvm]</li>
-<li>[Dom0Tools/QvmAddTemplate qvm-add-template]</li>
-<li>[Dom0Tools/QvmBackupRestore qvm-backup-restore]</li>
-<li>[Dom0Tools/QvmBackup qvm-backup]</li>
-<li>[Dom0Tools/QvmBlock qvm-block]</li>
-<li>[Dom0Tools/QvmClone qvm-clone]</li>
-<li>[Dom0Tools/QvmCreateDefaultDvm qvm-create-default-dvm]</li>
-<li>[Dom0Tools/QvmCreate qvm-create]</li>
-<li>[Dom0Tools/QvmFirewall qvm-firewall]</li>
-<li>[Dom0Tools/QvmGrowPrivate qvm-grow-private]</li>
-<li>[Dom0Tools/QvmKill qvm-kill]</li>
-<li>[Dom0Tools/QvmPci qvm-pci]</li>
-<li>[Dom0Tools/QvmPrefs qvm-prefs]</li>
-<li>[Dom0Tools/QvmRemove qvm-remove]</li>
-<li>[Dom0Tools/QvmRevertTemplateChanges qvm-revert-template-changes]</li>
-<li>[Dom0Tools/QvmRun qvm-run]</li>
-<li>[Dom0Tools/QvmShutdown qvm-shutdown]</li>
-<li>[Dom0Tools/QvmStart qvm-start]</li>
-<li>[Dom0Tools/QvmSyncAppmenus qvm-sync-appmenus]</li>
-<li>[Dom0Tools/QvmTemplateCommit qvm-template-commit]</li>
+<li><a href="/wiki/wiki/Dom0Tools/QubesDom0NetworkViaNetvm">qubes-dom0-network-via-netvm</a></li>
+<li><a href="/wiki/wiki/Dom0Tools/QubesDom0Update">qubes-dom0-update</a></li>
+<li><a href="/wiki/wiki/Dom0Tools/QubesPrefs">qubes-prefs</a></li>
+<li><a href="/wiki/wiki/Dom0Tools/QvmAddAppvm">qvm-add-appvm</a></li>
+<li><a href="/wiki/wiki/Dom0Tools/QvmAddTemplate">qvm-add-template</a></li>
+<li><a href="/wiki/wiki/Dom0Tools/QvmBackupRestore">qvm-backup-restore</a></li>
+<li><a href="/wiki/wiki/Dom0Tools/QvmBackup">qvm-backup</a></li>
+<li><a href="/wiki/wiki/Dom0Tools/QvmBlock">qvm-block</a></li>
+<li><a href="/wiki/wiki/Dom0Tools/QvmClone">qvm-clone</a></li>
+<li><a href="/wiki/wiki/Dom0Tools/QvmCreateDefaultDvm">qvm-create-default-dvm</a></li>
+<li><a href="/wiki/wiki/Dom0Tools/QvmCreate">qvm-create</a></li>
+<li><a href="/wiki/wiki/Dom0Tools/QvmFirewall">qvm-firewall</a></li>
+<li><a href="/wiki/wiki/Dom0Tools/QvmGrowPrivate">qvm-grow-private</a></li>
+<li><a href="/wiki/wiki/Dom0Tools/QvmKill">qvm-kill</a></li>
+<li><a href="/wiki/wiki/Dom0Tools/QvmPci">qvm-pci</a></li>
+<li><a href="/wiki/wiki/Dom0Tools/QvmPrefs">qvm-prefs</a></li>
+<li><a href="/wiki/wiki/Dom0Tools/QvmRemove">qvm-remove</a></li>
+<li><a href="/wiki/wiki/Dom0Tools/QvmRevertTemplateChanges">qvm-revert-template-changes</a></li>
+<li><a href="/wiki/wiki/Dom0Tools/QvmRun">qvm-run</a></li>
+<li><a href="/wiki/wiki/Dom0Tools/QvmShutdown">qvm-shutdown</a></li>
+<li><a href="/wiki/wiki/Dom0Tools/QvmStart">qvm-start</a></li>
+<li><a href="/wiki/wiki/Dom0Tools/QvmSyncAppmenus">qvm-sync-appmenus</a></li>
+<li><a href="/wiki/wiki/Dom0Tools/QvmTemplateCommit">qvm-template-commit</a></li>
 </ul>
