--- a/DomZeroTools.html
+++ b/DomZeroTools.html
@@ -1,6 +1,5 @@
 <p>QVM-tools:</p>
 <ul>
-<li><a href="/wiki/wiki/QvmLs">qvm-ls?</a></li>
 <li><a href="/wiki/wiki/Dom0Tools/QubesDom0NetworkViaNetvm">qubes-dom0-network-via-netvm</a></li>
 <li><a href="/wiki/wiki/Dom0Tools/QubesDom0Update">qubes-dom0-update</a></li>
 <li><a href="/wiki/wiki/Dom0Tools/QubesPrefs">qubes-prefs</a></li>
@@ -14,6 +13,7 @@
 <li><a href="/wiki/wiki/Dom0Tools/QvmCreate">qvm-create</a></li>
 <li><a href="/wiki/wiki/Dom0Tools/QvmFirewall">qvm-firewall</a></li>
 <li><a href="/wiki/wiki/Dom0Tools/QvmGrowPrivate">qvm-grow-private</a></li>
+<li><a href="/wiki/wiki/Dom0Tools/QvmLs">qvm-ls</a></li>
 <li><a href="/wiki/wiki/Dom0Tools/QvmKill">qvm-kill</a></li>
 <li><a href="/wiki/wiki/Dom0Tools/QvmPci">qvm-pci</a></li>
 <li><a href="/wiki/wiki/Dom0Tools/QvmPrefs">qvm-prefs</a></li>
