--- a/Sandbox/Include.html
+++ b/Sandbox/Include.html
@@ -1,1 +1,1 @@
-<p><a href="/wiki/wiki/Sandbox/Include(http%3A/git.qubes-os.org?p=marmarek/docs.git;a=blob_plain;f=qvm-tools/qvm-ls.rst;hb=master,%20text/x-rst)">Include(http://git.qubes-os.org/?p=marmarek/docs.git;a=blob_plain;f=qvm-tools/qvm-ls.rst;hb=master, text/x-rst)?</a></p>
+<p><a href="/wiki/wiki/Sandbox/Include(http%3A/git.qubes-os.org?p=mainstream/docs.git;a=blob_plain;f=qvm-tools/qvm-sync-appmenus.rst;hb=HEAD,%20text/x-rst)">Include(http://git.qubes-os.org/?p=mainstream/docs.git;a=blob_plain;f=qvm-tools/qvm-sync-appmenus.rst;hb=HEAD, text/x-rst)?</a></p>
