--- a/SystemDoc.html
+++ b/SystemDoc.html
@@ -32,6 +32,9 @@
 <ul>
 <li><a href="/wiki/wiki/Dom0SecureUpdates">Dom0 secure update mechanism</a></li>
 </ul>
+<ul>
+<li><a href="/wiki/wiki/VMSecureUpdates">VM secure update mechanism?</a></li>
+</ul>
 <p>Build instructions:</p>
 <ul>
 <li><a href="/wiki/wiki/QubesBuilder">Building Qubes</a></li>
