--- a/DomZeroTools.html
+++ b/DomZeroTools.html
@@ -20,6 +20,7 @@
 <li><a href="/wiki/wiki/Dom0Tools/QvmRemove">qvm-remove</a></li>
 <li><a href="/wiki/wiki/Dom0Tools/QvmRevertTemplateChanges">qvm-revert-template-changes</a></li>
 <li><a href="/wiki/wiki/Dom0Tools/QvmRun">qvm-run</a></li>
+<li><a href="/wiki/wiki/Dom0Tools/QvmService">qvm-service</a></li>
 <li><a href="/wiki/wiki/Dom0Tools/QvmShutdown">qvm-shutdown</a></li>
 <li><a href="/wiki/wiki/Dom0Tools/QvmStart">qvm-start</a></li>
 <li><a href="/wiki/wiki/Dom0Tools/QvmSyncAppmenus">qvm-sync-appmenus</a></li>
