--- a/UserDoc.html
+++ b/UserDoc.html
@@ -21,7 +21,7 @@
 <p>Command-line tools reference:</p>
 <ul>
 <li><a href="/wiki/wiki/DomZeroTools">Dom0 tools</a></li>
-<li>[VMTools VM tools]</li>
+<li><a href="/wiki/wiki/VmTools">VM tools</a></li>
 </ul>
 <p>Optional topics:</p>
 <ul>
