--- a/HCL.html
+++ b/HCL.html
@@ -33,4 +33,5 @@
 <ul>
 <li>Fujitsu S751 seems to work well, but requires BIOS update to get VT-d working. Reported by <a href="https://groups.google.com/forum/#!msg/qubes-devel/xoyNCigBvFE/ER61L6TbVpwJ">​Zrubecz Laszlo</a>.</li>
 <li>Sony Vaio Z2 (2011 edition) works fine but requires some BIOS mod to enable VT-d. Reported by <a href="https://groups.google.com/d/msg/qubes-devel/xoyNCigBvFE/fkC6em-Wqd0J">​Danny Fullerton</a>.</li>
+<li>Lenovo Thinkpad W510 with core I7 Q820, with proprietary Nvidia driver works fine. Reported by <a href="https://">​Sebastian Hültenschmidt</a>.</li>
 </ul>
