--- a/WikiStart.html
+++ b/WikiStart.html
@@ -2,6 +2,7 @@
 <h2 id="ForUsers">For Users</h2>
 <ul>
 <li><a href="/wiki/wiki/SecurityGoals">Qubes Security Goals</a></li>
+<li><a href="/wiki/wiki/SecurityBulletins">Qubes Security Bulletins</a></li>
 <li><a href="/wiki/wiki/InstallationGuide">Installation guide</a></li>
 <li><a href="/wiki/wiki/HCL">Hardware Compatibility List</a></li>
 <li><a href="/wiki/wiki/VerifyingSignatures">On digital signatures and how to verify Qubes downloads</a></li>
