--- a/SecurityBulletins.html
+++ b/SecurityBulletins.html
@@ -5,3 +5,6 @@
 <li><a href="https://groups.google.com/d/msg/qubes-devel/kRQSQircYKk/KW1lihKLFjYJ">​Qubes Security Bulletin #1</a></li>
 </ul>
 <h2 id="a2012">2012</h2>
+<ul>
+<li><a href="https://groups.google.com/d/topic/qubes-devel/JIpZoQUP6dQ/discussion">​Qubes Security Bulletin #1</a></li>
+</ul>
