--- a/SecurityBulletins.html
+++ b/SecurityBulletins.html
@@ -1,10 +1,13 @@
 <h1 id="QubesSecurityBulletins">Qubes Security Bulletins</h1>
 <h2 id="a2010">2010</h2>
+<ul>
+<li>None</li>
+</ul>
 <h2 id="a2011">2011</h2>
 <ul>
 <li><a href="https://groups.google.com/d/msg/qubes-devel/kRQSQircYKk/KW1lihKLFjYJ">​Qubes Security Bulletin #1</a></li>
 </ul>
 <h2 id="a2012">2012</h2>
 <ul>
-<li><a href="https://groups.google.com/d/topic/qubes-devel/JIpZoQUP6dQ/discussion">​Qubes Security Bulletin #2</a></li>
+<li><a href="https://groups.google.com/d/msg/qubes-devel/JIpZoQUP6dQ/g6TvtpUHzBQJ">​Qubes Security Bulletin #2</a></li>
 </ul>
