--- a/GUIdocs.html
+++ b/GUIdocs.html
@@ -129,6 +129,11 @@
 <td style="text-align: left;">None</td>
 <td style="text-align: left;">Dock the window in the tray</td>
 </tr>
+<tr class="odd">
+<td style="text-align: left;">MSG_WINDOW_HINTS</td>
+<td style="text-align: left;"><code> struct msg_window_hints { </code> <br /> <code>    uint32_t flags; </code> <br /> <code>    uint32_t min_width; </code> <br /> <code>    uint32_t min_height; </code> <br /> <code>    uint32_t max_width; </code> <br /> <code>    uint32_t max_height; </code> <br /> <code>    uint32_t width_inc; </code> <br /> <code>    uint32_t height_inc; </code> <br /> <code>    uint32_t base_width; </code> <br /> <code>    uint32_t base_height; </code> <br /> <code> }; </code></td>
+<td style="text-align: left;">Size hints for window manager</td>
+</tr>
 </tbody>
 </table>
 <h2 id="Dom0-AppVMmessages">Dom0 -&gt; AppVM messages</h2>
