--- a/GUIdocs.html
+++ b/GUIdocs.html
@@ -64,6 +64,7 @@
 <h2 id="AppVM-dom0messages">AppVM -&gt; dom0 messages</h2>
 <p>Proper handling of the below messages is security-critical. Observe that beside two messages (<code>CLIPBOARD</code> and <code>MFNDUMP</code>) the rest have fixed size, so the parsing code can be small.</p>
 <p>The <em>override_redirect</em> window attribute is explained at <a href="http://tronche.com/gui/x/xlib/window/attributes/override-redirect.html">​Override Redirect Flag</a>. The <em>transient_for</em> attribute is explained at <a href="http://tronche.com/gui/x/icccm/sec-4.html#WM_TRANSIENT_FOR">​Transient_for attribute</a>.</p>
+<p>Window manager hints and flags are described at <a href="http://standards.freedesktop.org/wm-spec/latest/">​http://standards.freedesktop.org/wm-spec/latest/</a>, especially part about <code>_NET_WM_STATE</code>.</p>
 <p>Each message starts with the following header</p>
 <pre class="wiki"><code>struct msghdr {   
         uint32_t type;
@@ -133,6 +134,11 @@
 <td style="text-align: left;">MSG_WINDOW_HINTS</td>
 <td style="text-align: left;"><code> struct msg_window_hints { </code> <br /> <code>    uint32_t flags; </code> <br /> <code>    uint32_t min_width; </code> <br /> <code>    uint32_t min_height; </code> <br /> <code>    uint32_t max_width; </code> <br /> <code>    uint32_t max_height; </code> <br /> <code>    uint32_t width_inc; </code> <br /> <code>    uint32_t height_inc; </code> <br /> <code>    uint32_t base_width; </code> <br /> <code>    uint32_t base_height; </code> <br /> <code> }; </code></td>
 <td style="text-align: left;">Size hints for window manager</td>
+</tr>
+<tr class="even">
+<td style="text-align: left;">MSG_WINDOW_FLAGS</td>
+<td style="text-align: left;"><code> struct msg_window_flags { </code> <br /> <code>     uint32_t flags_set; </code> <br /> <code>    uint32_t flags_unset;</code> <br /> <code> }; </code></td>
+<td style="text-align: left;">Change window state request; fields contains bitmask which flags request to be set and which unset</td>
 </tr>
 </tbody>
 </table>
@@ -212,6 +218,11 @@
 <td style="text-align: left;">MSG_KEYMAP_NOTIFY</td>
 <td style="text-align: left;"><code> unsigned char remote_keys[32]; </code></td>
 <td style="text-align: left;">Synchronize the keyboard state (key pressed/depressed) with dom0</td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;">MSG_WINDOW_FLAGS</td>
+<td style="text-align: left;"><code> struct msg_window_flags { </code> <br /> <code>     uint32_t flags_set; </code> <br /> <code>    uint32_t flags_unset;</code> <br /> <code> }; </code></td>
+<td style="text-align: left;">Window state change confirmation</td>
 </tr>
 </tbody>
 </table>
