--- a/Qrexec.html
+++ b/Qrexec.html
@@ -27,7 +27,7 @@
 <p>On target VM, the <em>/etc/qubes_rpc/RPC_ACTION_NAME</em> must exist, containing the file name of the program that will be invoked.</p>
 <p>On src VM, one should invoke the client via</p>
 <p><em>/usr/lib/qubes/qrexec_client_vm target_vm_name RPC_ACTION_NAME rpc_client_path client arguments</em></p>
-<p>Note that only stdin/stdout is passed between rpc server and client - notably, the server cmdline argument list is fixed (it contains one argument, source VM name). By default, stderr of client and server is logged to respective /var/log/qubes/qrexec.XID files.</p>
+<p>Note that only stdin/stdout is passed between rpc server and client - notably, the no cmdline argument are passed. Source VM name is given by QREXEC_REMOTE_DOMAIN environment variable. By default, stderr of client and server is logged to respective /var/log/qubes/qrexec.XID files.</p>
 <p>Be very careful when coding and adding a new rpc service. Unless the offered functionality equals full control over the target (it is the case with e.g. qubes.VMShell action), any vulnerability in a rpc server can be fatal to qubes security. On the other hand, this mechanism allows to delegate processing of untrusted input to less privileged (or throwaway) AppVMs, thus wise usage of it increases security.</p>
 <h3 id="QubesRPCexample">Qubes RPC example</h3>
 <p>We will show the necessary files to create rpc call that adds two integers on the target and returns back the result to the invoker.</p>
