--- a/InstallationGuide.html
+++ b/InstallationGuide.html
@@ -36,6 +36,9 @@
 <ul>
 <li>Installer might not support some USB keyboards (#230). This seems to include all the Mac Book keyboards (most PC laptops have PS2 keyboards and are not affected).</li>
 </ul>
+<ul>
+<li>If you don't enable Composition (System Setting -&gt; Desktop -&gt; Enable desktop effects), which you really should do, then the KDE task bar might get somehow ugly (e.g. half of it might be black). This is some KDE bug that we don't plan to fix.</li>
+</ul>
 <h2 id="GettingHelp">Getting Help</h2>
 <ul>
 <li><strong>User manuals are <a href="/wiki/wiki/UserDoc">here</a>.</strong> (Strongly recommended!)</li>
