--- a/InstallationGuide.html
+++ b/InstallationGuide.html
@@ -1,27 +1,31 @@
-<h1 id="InstallationGuideforQubesBeta3">Installation Guide (for Qubes Beta 3)</h1>
+<h1 id="InstallationGuideforQubes1.0rc1">Installation Guide (for Qubes 1.0 rc1)</h1>
+<p><strong>Qubes 1.0 rc1 is scheduled to be released in the coming days. Stay tuned'''</strong></p>
 <h2 id="HardwareRequirements">Hardware Requirements</h2>
 <p>Please see the <a href="/wiki/wiki/HCL">Hardware Compatibility List</a> page for more information on required and recommended hardware.</p>
 <h2 id="DownloadinstallerISO">Download installer ISO</h2>
 <p>You can download the ISO and the digital signature for the ISO from here:</p>
 <ul>
-<li><a href="http://s3-eu-west-1.amazonaws.com/qubes-os/iso/Qubes-R1-Beta3-x86_64-DVD.iso">​http://s3-eu-west-1.amazonaws.com/qubes-os/iso/Qubes-R1-Beta3-x86_64-DVD.iso</a></li>
-<li><a href="http://s3-eu-west-1.amazonaws.com/qubes-os/iso/Qubes-R1-Beta3-x86_64-DVD.iso.asc">​http://s3-eu-west-1.amazonaws.com/qubes-os/iso/Qubes-R1-Beta3-x86_64-DVD.iso.asc</a></li>
+<li>FIXME (Coming soon!)</li>
+<li>FIXME (Coming soon!)</li>
 </ul>
-<p>or you might try to download the ISO via bit torrent:</p>
+<p>... or you might try to download the ISO via bit torrent:</p>
 <ul>
-<li><a href="http://s3-eu-west-1.amazonaws.com/qubes-os/iso/Qubes-R1-Beta3-x86_64-DVD.iso?torrent">​http://s3-eu-west-1.amazonaws.com/qubes-os/iso/Qubes-R1-Beta3-x86_64-DVD.iso?torrent</a></li>
+<li>FIXME</li>
 </ul>
 <p>See this <a href="/wiki/wiki/VerifyingSignatures">page</a> for more info about how to download and verify our GPG keys. Then, verify the downloaded ISO:</p>
 <pre class="wiki"><code>gpg -v &lt;iso&gt;.asc</code></pre>
 <h2 id="BurningtheISOontoaDVDorUSBstick">Burning the ISO onto a DVD or USB stick</h2>
-<p>Once you verify this is an authentic ISO, you should burn it on a DVD. For instructions on how to &quot;burn&quot; it on a USB stick, see <a href="/wiki/wiki/UsbInstallation">this page</a>. Before proceeding with the installation, you are encouraged to first read all the information on this page, especially the <em>Known Issues</em> paragraph.</p>
+<p>Once you verify this is an authentic ISO, you should burn it on a DVD.</p>
+<p>If you prefer to use USB as a source for installation, then you just need to copy the ISO onto the USB device, e.g. using dd:</p>
+<pre class="wiki"><code>dd if=Qubes-R1-rc1-x86_64-DVD.iso of=/dev/sdX</code></pre>
+<p><strong>Be sure to use a correct device as the target in the dd command above (instead of sdX)'''</strong></p>
+<p>Before proceeding with the installation, you are encouraged to first read all the information on this page, especially the <em>Known Issues</em> paragraph.</p>
 <p>Then, when finally ready, boot your system from the installer DVD and follow the instructions on screen. The installer is very simple and asks very few questions -- it's actually easier to install Qubes right now than most other Linux distributions!</p>
 <p>The installer loads Xen right at the beginning, so chances are high that if you can see the installer's graphical screen, Qubes will work on your system :)</p>
-<h2 id="MigratingfromQubesBeta2">Migrating from Qubes Beta 2</h2>
-<p>If you have Qubes Beta 2 currently installed on your system, you must reinstall from scratch, as we offer no direct upgrade option in the installer (sorry). However, we do offer tools for smooth migration of your AppVMs. In order to do that, please backup your AppVMs using the <code></code><code>qvm-backup</code><code></code> tool <a href="/wiki/wiki/BackupRestore">as usual</a>. Then, after you install Qubes Beta 3, you can restore them using <code></code><code>qvm-backup-restore</code><code></code> tool that. Because we have changed the default template in Beta 3, you should tell qvm-back-restore about that by passing <code></code><code>--replace-template</code><code></code> option:</p>
-<pre class="wiki"><code>qvm-backup-restore &lt;backup_dir&gt; --replace-template=fedora-14-x64:fedora-15-x64</code></pre>
+<h2 id="MigratingfromQubesBeta3">Migrating from Qubes Beta 3</h2>
+<p>If you have Qubes Beta 3 currently installed on your system, you must reinstall from scratch, as we offer no direct upgrade option in the installer (sorry). However, we do offer tools for smooth migration of your AppVMs. In order to do that, please backup your AppVMs using the <code></code><code>qvm-backup</code><code></code> tool <a href="/wiki/wiki/BackupRestore">as usual</a>. Then, after you install Qubes 1.0 rc1, you can restore them using <code></code><code>qvm-backup-restore</code><code></code> tool. You can also use a &quot;Restore from backup&quot; button from the Qubes Manager.</p>
 <h2 id="InstallingUpdates">Installing Updates</h2>
-<p>Currently the user must start the update process manually (in future versions we will make this automatic).</p>
+<p>Installing updates is very easy and can be done using the &quot;Update&quot; button in the Qubes Manager. Alternatively it can also be done from command prompt -- see the following for more details:</p>
 <ul>
 <li>For installing updates for Dom0 -- see instructions <a href="/wiki/wiki/SoftwareUpdateDom0">here</a>.</li>
 <li>For installing updates for you domains (VMs) -- see instructions <a href="/wiki/wiki/SoftwareUpdateVM">here</a>.</li>
@@ -29,9 +33,6 @@
 <h2 id="KnownIssues">Known Issues</h2>
 <ul>
 <li>NVIDIA GPU will likely cause problems, especially if you use suspend-to-RAM. This mostly results from the general poor support for NVIDIA GPUs under Linux, which in turn is caused by the lack of open documentation for those GPUs. You might try to use the NVIDIA's proprietary driver (see the instructions <a href="/wiki/wiki/InstallNvidiaDriver">here</a>), which apparently helps a lot.</li>
-</ul>
-<ul>
-<li>If you have Sony Vaio Z, you will need some tinkering before you would be able to fully use this machine with Qubes (and generally with non-Windows systems). See this <a href="/wiki/wiki/SonyVaioTinkering">page</a> for instructions.</li>
 </ul>
 <ul>
 <li>Installer might not support some USB keyboards (#230). This seems to include all the Mac Book keyboards (most PC laptops have PS2 keyboards and are not affected).</li>
