--- a/FullScreenMode.html
+++ b/FullScreenMode.html
@@ -1,7 +1,26 @@
 <h1 id="EnablingFullScreenModeforselectVMs">Enabling Full Screen Mode for select VMs</h1>
-<h2 id="Whyisfullscreenmodepotentiallydangerous">Why is full screen mode potentially dangerous ?</h2>
-<p>TODO</p>
+<h2 id="Whatisfullscreenmode">What is full screen mode?</h2>
+<p>Normally Qubes GUI virtualization daemon restricts the VM from &quot;owning&quot; the full screen, ensuring that there are always clearly marked decorations drawn by the trusted Window Manager around each of the VMs window. This allows the user to easily realize to which domain a specific window belongs. See the screenshots below for better understanding:</p>
+<p><a href="http://qubes-os.org/Screenshots.html">​http://qubes-os.org/Screenshots.html</a></p>
+<h2 id="Whyisfullscreenmodepotentiallydangerous">Why is full screen mode potentially dangerous?</h2>
+<p>If one allowed one of the VMs to &quot;own&quot; the full screen, e.g. to show a movie on a full screen, it might not be possible for the user to further realize if the applications/VM really &quot;released&quot; the full screen, or does it keep emulating the whole desktop and pretends to be the trusted Window Manager, drawing shapes on the screen that look e.g. like other windows, belonging to other domains (e.g. to trick the user into entering a secret passphrase into a window that looks like belonging to some trusted domain).</p>
 <h2 id="Secureuseoffullscreenmode">Secure use of full screen mode</h2>
-<p>TODO</p>
+<p>However, it is possible to deal with full screen mode in a secure way assuming there are mechanisms that can be used at any time to show the full desktop, and which cannot be intercepted by the VM. An example of such q mechanism is the KDE's &quot;Present Windows&quot; and &quot;Desktop Grid&quot; effects, which are similar to Mac's &quot;Expose&quot; effect, and which can be used to immediately detect potential &quot;GUI forgery&quot;, as they cannot be intercepted by any of the VM (as the GUID never passes down the key combinations that got consumed by KDE Window Manager), and so the VM cannot emulate those. Those effects are enabled by default in KDE once Compositing gets enabled in KDE (System Settings -&gt; Desktop -&gt; Enable Desktop Effects), which is recommended anyway. By default they are triggered by Ctrl-F8 and Ctrl-F9 key combinations, but can also be reassigned to other shortcuts.</p>
 <h2 id="EnablingfullscreenmodeforselectVMs">Enabling full screen mode for select VMs</h2>
-<p>TODO</p>
+<p>If you want to enable full screen mode for select VMs, you can do that by creating the following entry in the /etc/qubes/guid.conf file in Dom0:</p>
+<pre class="wiki"><code>VM: {
+  personal: {
+    allow_fullscreen = true;
+  };
+};</code></pre>
+<p>The string 'personal' above is exemplary and should be replaced by the actual name of the VM for which you want to enable this functionality.</p>
+<p>One can also enable this functionality for all the VMs globally in the same file, by modifying the 'global' section:</p>
+<pre class="wiki"><code>global: {
+  # default values
+  allow_fullscreen = true;
+  #allow_utf8_titles = false;
+  #secure_copy_sequence = &quot;Ctrl-Shift-c&quot;;
+  #secure_paste_sequence = &quot;Ctrl-Shift-v&quot;;
+  #windows_count_limit = 500;
+};</code></pre>
+<p>Be sure to restart the VM(s) after modifying this file, for the changes to take effect.</p>
