--- a/DevelFaq.html
+++ b/DevelFaq.html
@@ -15,9 +15,9 @@
 </ul>
 <p>If you're interested in porting GNOME for Qubes Dom0 use, let us know -- we will most likely welcome patches in this area.</p>
 <h3 id="Q:Whatistherecommendedbuildenvironment">Q: What is the recommended build environment?</h3>
-<p>Fedora 12 Linux, 64-bit, with most of the regular development packages installed.</p>
+<p>Any rpm-based, 64-bit. Preferred Fedora.</p>
 <h3 id="Q:HowtobuildQubesfromsources">Q: How to build Qubes from sources?</h3>
-<p>See <a href="https://groups.google.com/group/qubes-devel/browse_thread/thread/710f725713cc7e8a#">​this message</a>.</p>
+<p>See <a href="/wiki/wiki/QubesBuilder">the instruction</a></p>
 <h3 id="Q:HowdoIsubmitapatch">Q: How do I submit a patch?</h3>
 <ol>
 <li>Make all the changes in your working directory, i.e. edit files, move</li>
