--- a/InstallNvidiaDriver.html
+++ b/InstallNvidiaDriver.html
@@ -1,4 +1,5 @@
 <h1 id="Nvidiaproprietarydriverinstallation">Nvidia proprietary driver installation</h1>
+<p><strong>This is outdated since Qubes 1.0-rc1 as nvidia binary driver isn't compatible with vanilla kernel under Xen.</strong></p>
 <p>The NVIDIA proprietary driver works <strong>much</strong> more stable than nouveau, so it's good idea to install it.</p>
 <h1 id="RpmFusionpackages"><a href="/wiki/wiki/RpmFusion">RpmFusion?</a> packages</h1>
 <p>There are rpm packages with all necessary software on rpmfusion. The only package you have to compile is kernel module (but there is ready src.rpm package).</p>
