--- a/UserDoc.html
+++ b/UserDoc.html
@@ -17,6 +17,7 @@
 <li>Creating custom NetVMs</li>
 <li>Creating custom ProxyVMs</li>
 <li><a href="/wiki/wiki/CopyToDomZero">How to copy files to Dom0?</a></li>
+<li><a href="https://groups.google.com/group/qubes-devel/msg/9d1ac581236ca9b4">​Extend root.img size</a></li>
 </ul>
 <p>Command-line tools reference:</p>
 <ul>
