--- a/HCL.html
+++ b/HCL.html
@@ -37,4 +37,5 @@
 <li>Lenovo x220 8GB RAM, Intel graphics (core i5), VT-d is working. Reported by <a href="https://groups.google.com/group/qubes-devel/msg/f41578eef913446a">​Stefan Boresch</a></li>
 <li>Dell Latitude E6520 with i7-2760QM CPU. VT-d works fine. nVidia graphics not working, but integrated Intel does. Reported by <a href="https://groups.google.com/group/qubes-devel/msg/340afc6fc2d06d0e">​Steven Collins</a></li>
 <li>Dell <a href="/wiki/wiki/PowerEdge">PowerEdge?</a> T110 II, onboard Matrox graphics (Intel Xeon E3-1230), VT-d is working. Reported by <a href="https://groups.google.com/group/qubes-devel/msg/8a894915909eeaee">​Geoff</a></li>
+<li>Toshiba Tecra S11. Requires <a href="https://groups.google.com/group/qubes-devel/browse_thread/thread/fdec0ec165a87726">​some tinkering</a> to enable 3G modem. Reported by Jan Beerden</li>
 </ul>
