--- a/UserDoc.html
+++ b/UserDoc.html
@@ -18,6 +18,7 @@
 <li>Creating custom ProxyVMs</li>
 <li><a href="/wiki/wiki/CopyToDomZero">How to copy files to Dom0?</a></li>
 <li><a href="https://groups.google.com/group/qubes-devel/msg/9d1ac581236ca9b4">​Extend root.img size</a></li>
+<li>Installing <a href="/wiki/wiki/AntiEvilMaid">Anti Evil Maid</a></li>
 </ul>
 <p>Command-line tools reference:</p>
 <ul>
