--- a/InstallationGuide.html
+++ b/InstallationGuide.html
@@ -1,9 +1,9 @@
 <h1 id="InstallationGuideforQubes1.0rc1">Installation Guide (for Qubes 1.0 rc1)</h1>
-<p><strong>Qubes 1.0 rc1 is scheduled to be released in the coming days. Stay tuned'''</strong></p>
 <h2 id="HardwareRequirements">Hardware Requirements</h2>
 <p>Please see the <a href="/wiki/wiki/HCL">Hardware Compatibility List</a> page for more information on required and recommended hardware.</p>
 <h2 id="DownloadinstallerISO">Download installer ISO</h2>
 <p>You can download the ISO and the digital signature for the ISO from here:</p>
+<p><strong>Note:</strong> Be sure that you use a modern, non-handicapped browser to access the links below (e.g. disable the NoScript and the likes extensions that try to turn your Web Browser essentially into the 90's Mosaic).</p>
 <ul>
 <li><a href="http://qubes-os.s3.amazonaws.com/iso/Qubes-R1-rc1-x86_64-DVD.iso">​http://qubes-os.s3.amazonaws.com/iso/Qubes-R1-rc1-x86_64-DVD.iso</a></li>
 <li><a href="http://qubes-os.s3.amazonaws.com/iso/Qubes-R1-rc1-x86_64-DVD.iso.asc">​http://qubes-os.s3.amazonaws.com/iso/Qubes-R1-rc1-x86_64-DVD.iso.asc</a></li>
