--- a/InstallationGuide.html
+++ b/InstallationGuide.html
@@ -33,13 +33,13 @@
 </ul>
 <h2 id="KnownIssues">Known Issues</h2>
 <ul>
-<li>NVIDIA GPU will likely cause problems, especially if you use suspend-to-RAM. This mostly results from the general poor support for NVIDIA GPUs under Linux, which in turn is caused by the lack of open documentation for those GPUs. You might try to use the NVIDIA's proprietary driver (see the instructions <a href="/wiki/wiki/InstallNvidiaDriver">here</a>), which apparently helps a lot.</li>
-</ul>
-<ul>
 <li>Installer might not support some USB keyboards (#230). This seems to include all the Mac Book keyboards (most PC laptops have PS2 keyboards and are not affected).</li>
 </ul>
 <ul>
 <li>If you don't enable Composition (System Setting -&gt; Desktop -&gt; Enable desktop effects), which you really should do, then the KDE task bar might get somehow ugly (e.g. half of it might be black). This is some KDE bug that we don't plan to fix.</li>
+</ul>
+<ul>
+<li>Some keyboard layout set by KDE System Settings can cause <a href="https://groups.google.com/group/qubes-devel/browse_thread/thread/77d076b65dda7226">​keyboard not working at all</a>. If you hit this issue, you can switch to console (by console login option) and manually edit <code></code>/etc/X11/xorg.conf.d/00-system-setup-keyboard.conf<code></code> (and <code></code>/etc/sysconfig/keyboard<code></code>) and place correct keyboard layout settings (details in linked thread). You can check if specific keyboard layout settings are proper using <code></code>setxkbmap<code></code> tool.</li>
 </ul>
 <h2 id="GettingHelp">Getting Help</h2>
 <ul>
