--- a/QubesBuilder.html
+++ b/QubesBuilder.html
@@ -51,3 +51,61 @@ make iso </code></pre>
 <p>You can also build selected component separately. Eg. to compile only gui virtualization agent/daemon:</p>
 <pre class="wiki"><code>make gui</code></pre>
 <p>Full list you can get from make help.</p>
+<h2 id="Makingcustomizedbuild">Making customized build</h2>
+<p>You can use above tool to build Qubes with some components modified. Described here procedure will build Qubes with:</p>
+<ul>
+<li>non-default kernel</li>
+<li>newer Intel display driver</li>
+</ul>
+<p>The instruction:</p>
+<ol>
+<li>Download qubes-builder as described above</li>
+<li>Edit builder.conf (still the same as above), some useful additions:
+<ul>
+<li><p>As time of writing this, the default is fc15, but latest supported is fc17, so switch to newer one</p>
+<pre class="wiki"><code>DISTS_VM=&quot;fc17&quot;</code></pre></li>
+<li>You can also set GIT_SUBDIR=&quot;marmarek&quot; to use my repo instead of &quot;mainstream&quot; - it contains newer (but less tested) versions</li>
+</ul></li>
+</ol>
+<ol start="3">
+<li><p>Download unmodified sources</p>
+<pre class="wiki"><code>make get-sources</code></pre></li>
+</ol>
+<ol start="4">
+<li>Make your modifications here</li>
+</ol>
+<ul>
+<li><p>The kernel</p>
+<pre class="wiki"><code>cd qubes-src/kernel
+git fetch git://git.qubes-os.org/marmarek/kernel.git devel-3.4:devel-3.4
+git checkout devel-3.4
+# need to download sources again, as the first time the default (older) kernel source was downloaded
+# note that this is run from kernel subdir, not main qubes-builder directory
+make BUILD_FLAVOR=pvops get-sources
+
+cd ../../</code></pre></li>
+</ul>
+<ul>
+<li><p>Xorg driver</p>
+<pre class="wiki"><code>cd qubes-src/dom0-updates
+rm xorg-x11-driver-intel*fc15.src.rpm
+yumdownloader --releasever=17 --source xorg-x11-driver-intel
+
+cd ../../</code></pre></li>
+</ul>
+<blockquote>
+<p>If you want to install any other package in newer version than in fc13 (on which dom0 is based), you can place it here. Remember to update also Makefile to include its build and add its build requires to <em>build-pkgs-dom0-updates.list</em> in qubes-builder dir.</p>
+</blockquote>
+<ol start="5">
+<li><p>Build the Qubes<br /> <code>make qubes</code> actually is just meta target which build all required components in correct order</p>
+<pre class="wiki"><code>grep ^qubes: Makefile
+qubes: get-sources xen core kernel gui addons docs template kde-dom0 installer qubes-manager dom0-updates sign-all</code></pre></li>
+</ol>
+<blockquote>
+<p><code>get-sources</code> is already done, so continue with the next one. You can skip <code>sign-all</code> if you've disabled signing</p>
+<pre class="wiki"><code>make xen core kernel gui addons docs template kde-dom0 installer qubes-manager dom0-updates</code></pre>
+</blockquote>
+<ol start="6">
+<li><p>build iso installation image</p>
+<pre class="wiki"><code>make iso</code></pre></li>
+</ol>
